# HelloTravis

./: .travis.yml  CMakeLists.txt  TravisLog.txt  TravisTest.cpp  build.bat  build.sh  gtest.cmake
